--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <button type="button" id="rock">ROCK</button>
+    <button type="button" id="paper">PAPER</button>
+    <button type="button" id="scissors">SCISSORS</button>
+    <p></p>
 </body>
 </html>
