Display score after each round

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button type="button" id="rock">ROCK</button>
     <button type="button" id="paper">PAPER</button>
     <button type="button" id="scissors">SCISSORS</button>
-    <p></p>
+    <div class="score-label">SCORE: </div>
 </body>
 </html>
