--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button" id="rock">ROCK</button>
-    <button type="button" id="paper">PAPER</button>
-    <button type="button" id="scissors">SCISSORS</button>
+    <button type="button" class="player-choice" id="rock">ROCK</button>
+    <button type="button" class="player-choice" id="paper">PAPER</button>
+    <button type="button" class="player-choice" id="scissors">SCISSORS</button>
     <div class="score-label">SCORE: </div>
 </body>
 </html>
