--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <button type="button" class="player-choice" id="rock">ROCK</button>
-    <button type="button" class="player-choice" id="paper">PAPER</button>
-    <button type="button" class="player-choice" id="scissors">SCISSORS</button>
+    <div class="buttons">
+        <button type="button" class="player-choice" id="rock">👊</button>
+        <button type="button" class="player-choice" id="paper">✋</button>
+        <button type="button" class="player-choice" id="scissors">✌️</button>
+    </div>
     <div class="score-label">SCORE: </div>
 </body>
 </html>
