Style the score and reset button

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="header">ROCK PAPER SCISSORS</h1>
     <div class="buttons">
         <button type="button" class="player-choice" id="rock">👊</button>
         <button type="button" class="player-choice" id="paper">✋</button>
         <button type="button" class="player-choice" id="scissors">✌️</button>
     </div>
-    <div class="score-label">SCORE: </div>
+    <div class="panel">
+        <div class="score-label">SCORE: </div>
+    </div>
 </body>
 </html>
